force-app/main/default/objects/cpm__Schemas__c/cpm__Schemas__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Schemas</label>
</CustomObject>