force-app/main/default/objects/cpm__Schemas__c/fields/cpm__Generator__c.field-meta.xml
<CustomField>
    <fullName>cpm__Generator__c</fullName>
    <label>Generator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>