force-app/main/default/objects/cpm__Schemas__c/fields/cpm__Identifier__c.field-meta.xml
<CustomField>
    <fullName>cpm__Identifier__c</fullName>
    <label>Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>