force-app/main/default/objects/cpm__Schemas__c/fields/cpm__Processor__c.field-meta.xml
<CustomField>
    <fullName>cpm__Processor__c</fullName>
    <label>Processor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>